# A-Maze-ing

./: .gitignore  LICENSE.md  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  renderer.py  tester.py
mazegen/: __init__.py  generator.py
tests/: __init__.py  test_cli.py  test_config.py  test_generator.py  test_output_renderer.py
